Add support for running Snowflake connector on Azure
(cherry-picked from commit: 7c5c97511f0466df9a0ec505c55f96e7792ad53a)